--- a/css/custom.css
+++ b/css/custom.css
@@ -46,17 +46,9 @@ font-size: large;
 	background-color: #BD0FE1;
 }
 
-div.centre
-{
-  width: 200px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-
-.randomblue {
-	color: #cc0000#
+#shorthline {
+	background-color: #000000;
+	height: 1px;
 }
 
 .center-inner {
@@ -70,6 +62,7 @@ div.centre
 .top15 { margin-top:15px; }
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
+.top45 { margin-top:45px; }
 
 .bottom5 { margin-bottom:5px; }
 .bottom7 { margin-bottom:7px; }
