--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,7 @@
 #filter {
 	background-color: #AFC6E0;
 	margin-left: 30px;
+	width: 180px;
 }
 
 #paramheader {
@@ -41,6 +42,11 @@ font-size: large;
 #nugget {
 	background-color: #101B45;
 	border:1px solid #101B45;
+}
+
+#datatable {
+	font-family: 	Arial, Verdana, sans-serif;
+	font-size:	13px;
 }
 
 #levelcheckboxtext {
