--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,10 @@
 font-size: large;
 }
 
+#maindiv {
+	background-color: #C01C1C;
+}
+
 .arrowbtn {
 	border-color: rgba(100, 100, 100, 0.0);
 	background-color: rgba(100, 100, 100, 0.0);
@@ -103,6 +107,17 @@ margin-left: -5px;
 
 #inforow {
 	height: 50px;
+}
+
+#rightcollumn {
+
+	background-color: #BD0FE1;
+	width: 480px;
+}
+
+#mainrow {
+	max-width: 1100px;
+	background-color: #BD0FE1;
 }
 
 .center-inner {
