--- a/css/custom.css
+++ b/css/custom.css
@@ -108,8 +108,9 @@ margin-left: -5px;
 #rightcollumn {
 
 	
-	min-width: 480px;
+	min-width: 370px;
 	white-space: nowrap;
+	background-color: #D0011B;
 
 }
 
@@ -118,7 +119,7 @@ margin-left: -5px;
 }
 
 #innermainrow {
-	min-width: 1000px;
+	min-width: 1250px;
 	max-width: 1500px;
 	
 	height: 100px;
@@ -126,8 +127,6 @@ margin-left: -5px;
 }
 
 #mainrow {
-	max-width: 1500px;
-	min-width: 1000px;
 	overflow: auto;
 	max-height: 100px;
 }
