--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -185,7 +185,7 @@ margin-left: -5px;
 }
 
 .top-5 { border-top:-5px; }
-
+.top4 { margin-top:4px; }
 .top5 { margin-top:5px; }
 .top7 { margin-top:7px; }
 .top10 { margin-top:10px; }
