--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -190,6 +190,10 @@ margin-left: -5px;
     margin: 0 auto; 
 }
 
+input::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
 .top-5 { border-top:-5px; }
 .top4 { margin-top:4px; }
 .top5 { margin-top:5px; }
@@ -223,7 +227,3 @@ margin-left: -5px;
 .right17 { margin-right:17px; }
 .right25 { margin-right:25px; }
 .right30 { margin-right:30px; }
-
-
-
-
