--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -203,6 +203,7 @@ input::-webkit-calendar-picker-indicator {
 .top15 { margin-top:15px; }
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
+.top40 { margin-top:40px; }
 .top45 { margin-top:45px; }
 .top60 { margin-top:60px; }
 
