--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -130,16 +130,21 @@ margin-left: -5px;
 	background-color: #C01C1C;
 }
 
+.freeriderbox{
+	background-color: #5086B2;
+	text-align: center;
+	margin-right: -10px;
+	margin-left: -10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 #courselevellabel {
 	margin-bottom: -5px;
 }
 
 .randompink{
 	background-color: #BD0FE1;
-}
-
-.randomblue{
-	background-color: #0000FF;
 }
 
 #shorthline {
