--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -38,7 +38,7 @@ font-size: large;
 .arrowbtn {
 	border-color: rgba(100, 100, 100, 0.0);
 	background-color: rgba(100, 100, 100, 0.0);
-	max-width: 5px;
+	width: 25px;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	outline: none !important;
