Changed the color of submit and search buttons and the free rider box

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,7 +17,7 @@
 }
 
 #submitdata {
-	background-color: #3C6492;
+	background-color: #4984BF;
 	margin-top: -25px;
 }
 
@@ -135,7 +135,7 @@ margin-left: -5px;
 }
 
 .freeriderbox{
-	background-color: #5086B2;
+	background-color: #759BC3;
 	text-align: center;
 	margin-right: -10px;
 	margin-left: -10px;
@@ -157,8 +157,8 @@ margin-left: -5px;
 }
 
 #submitquery {
-	background-color: #428BCA;
-	border:1px solid #428BCA;
+	background-color: #4984BF;
+	border:1px solid #4984BF;
 }
 
 #inforow {
