--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -32,13 +32,13 @@
 }
 
 .filtersectionheader {
-font-size: large;
+	font-size: large;
 }
 
 #tabbar {
 	background-color: #F7F7EE;
 	width: 100%;
-	
+	min-width: 1250px;
 }
 
 .tab {
@@ -118,6 +118,12 @@ font-size: large;
 	background-color: #101B45;
 	border:1px solid #101B45;
 	height: 34px;
+}
+
+#background {
+	background-color: #ECF2F7;
+	height: 100%;
+	min-height: 1000px;
 }
 
 #goldnuggetimg {
