--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -35,6 +35,14 @@
 	font-size: large;
 }
 
+#background {
+	background-color: #ECF2F7;
+	height: 100%;
+	min-height: 1000px;
+	width: 100%;
+	min-width: 1250px;
+}
+
 #tabbar {
 	background-color: #F7F7EE;
 	width: 100%;
@@ -118,12 +126,6 @@
 	background-color: #101B45;
 	border:1px solid #101B45;
 	height: 34px;
-}
-
-#background {
-	background-color: #ECF2F7;
-	height: 100%;
-	min-height: 1000px;
 }
 
 #goldnuggetimg {
